--- a/portfolio.html
+++ b/portfolio.html
@@ -77,10 +77,14 @@
                             <div class="examples-thumb">
                                 <img src="./images/portfolio/1.jpg" alt="Технокряк" width="370" height="294" />
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                <div class="examples-overlay">
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+
+
 
                             </div>
                             <div class="projects">
@@ -95,11 +99,13 @@
                             <div class="examples-thumb">
                                 <img src="./images/portfolio/2.jpg" alt="Постер New Orlean vs Golden Star" width="370"
                                     height="294" />
+                                <div class="examples-overlay">
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
 
                             </div>
                             <div class="projects">
@@ -114,10 +120,12 @@
                             <div class="examples-thumb">
                                 <img src="./images/portfolio/3.jpg" alt="Ресторан Seafood" width="370" height="294" />
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                <div class="examples-overlay">
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
 
                             </div>
                             <div class="projects">
@@ -132,10 +140,12 @@
                             <div class="examples-thumb">
                                 <img src="./images/portfolio/4.jpg" alt="Проект Prime" width="370" height="294" />
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                <div class="examples-overlay">
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
 
                             </div>
                             <div class="projects">
@@ -150,10 +160,12 @@
                             <div class="examples-thumb">
                                 <img src="./images/portfolio/5.jpg" alt="Проект Boxes" width="370" height="294" />
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                <div class="examples-overlay">
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
 
                             </div>
                             <div class="projects">
@@ -169,10 +181,12 @@
                                 <img src="./images/portfolio/6.jpg" alt="Inspiration has no Borders" width="370"
                                     height="294" />
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                <div class="examples-overlay">
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
 
                             </div>
                             <div class="projects">
@@ -188,10 +202,12 @@
                                 <img src="./images/portfolio/7.jpg" alt="Издание Limited Edition" width="370"
                                     height="294" />
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                <div class="examples-overlay">
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
 
                             </div>
                             <div class="projects">
@@ -206,10 +222,12 @@
                             <div class="examples-thumb">
                                 <img src="./images/portfolio/8.jpg" alt="Проект LAB" width="370" height="294" />
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                <div class="examples-overlay">
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
 
                             </div>
                             <div class="projects">
@@ -224,10 +242,12 @@
                             <div class="examples-thumb">
                                 <img src="./images/portfolio/9.jpg" alt="Growing Business" width="370" height="294" />
 
-                                <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
-                                    функционала и сервисов. Все это позволит посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.
-                                </p>
+                                <div class="examples-overlay">
+                                    <p class="description">Ресурс предлагает комплексные предложения с разным уровнем
+                                        функционала и сервисов. Все это позволит посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
 
 
                             </div>
