--- a/index.html
+++ b/index.html
@@ -507,6 +507,15 @@
                     </ul>
 
                 </div>
+                <div class="subscription">
+
+                    <h3 class="subscription-title">Подпишитесь на рассылку</h3>
+
+                    <input type="email" class="form-input" name="mail" id="mail" placeholder="E-mail">
+
+                    <button type="submit">Подписаться</button>
+
+                </div>
             </div>
         </div>
     </footer>
