--- a/index.html
+++ b/index.html
@@ -74,29 +74,43 @@
                         <div class="modal-field">
                             <label class="modal-label" for="name">Имя</label>
                             <input class="modal-input" type="name" name="name" id="name">
+                            <svg class="icon-form" width="18" height="18">
+                                <use href="./images/svg/sprite.svg#icon-name"></use>
+                            </svg>
                         </div>
                         <div class="modal-field">
                             <label class="modal-label" for="tel">Телефон</label>
                             <input class="modal-input" type="tel" name="tel" id="tel">
+                            <svg class="icon-form" width="18" height="18">
+                                <use href="./images/svg/sprite.svg#icon-tel"></use>
+                            </svg>
                         </div>
                         <div class="modal-field">
                             <label class="modal-label" for="mail">Почта</label>
                             <input class="modal-input" type="email" name="mail" id="mail">
+                            <svg class="icon-form" width="18" height="18">
+                                <use href="./images/svg/sprite.svg#icon-mail"></use>
+                            </svg>
                         </div>
                         <div class="modal-field">
                             <label class="modal-label" for="comments">Комментарий</label>
-                            <textarea name="comments" id="comments" placeholder="Введите текст" rows="10"></textarea>
+                            <textarea class="comment" name="comments" id="comments" placeholder="Введите текст"
+                                rows="10"></textarea>
                         </div>
+
+
+                        <div class="modal-field">
+                            <input type="checkbox" name="checkbox" id="checkbox">
+                            <label for="checkbox">Соглашаюсь с рассылкой и принимаю
+                                <a class="contract-link" href=""><span class="contract">Условия договора</span></a>
+                            </label>
+                            <svg class="icon-form" width="18" height="18">
+                                <use href="./images/svg/sprite.svg#icon-check-mark"></use>
+                            </svg>
+                        </div>
+
+                        <button type="submit" class="button-sub" disabled>Отправить</button>
                     </form>
-
-                    <div class="modal-field">
-                        <input type="checkbox" name="checkbox" id="checkbox">
-                        <label for="checkbox">Соглашаюсь с рассылкой и принимаю
-                            <a class="contract-link" href=""><span class="contract">Условия договора</span></a>
-                        </label>
-                    </div>
-
-                    <button type="submit" class="button-sub" disabled>Отправить</button>
 
 
 
@@ -546,8 +560,9 @@
                     <h3 class="subscription-title">Подпишитесь на рассылку</h3>
                     <form class="form-subscription">
                         <div class="form-field">
-                            <label for="mail">E-mail</label>
                             <input type="email" class="form-input" name="mail" id="mail" placeholder=" ">
+                            <label class="form-label" for="mail">E-mail</label>
+
                         </div>
 
                         <button type="submit" class="button-sub">Подписаться
