--- a/portfolio.html
+++ b/portfolio.html
@@ -326,6 +326,27 @@
                     </ul>
 
                 </div>
+
+                <!-- форма подписки -->
+
+                <div class="subscription">
+
+                    <h3 class="subscription-title">Подпишитесь на рассылку</h3>
+                    <form class="form-subscription">
+                        <div class="form-field">
+                            <input type="email" class="form-input" name="mail" id="mail" placeholder=" ">
+                            <label class="form-label" for="mail">E-mail</label>
+
+                        </div>
+
+                        <button type="submit" class="button-sub">Подписаться
+                            <svg class="icon-subscription" width="24" height="24">
+                                <use href="./images/svg/sprite.svg#icon-icon-send"></use>
+                            </svg>
+                        </button>
+                    </form>
+
+                </div>
             </div>
         </div>
     </footer>
