--- a/index.html
+++ b/index.html
@@ -70,46 +70,58 @@
 
                 <div class="modal">
                     <h3 class="modal-title">Оставьте свои данные, мы вам перезвоним</h3>
+
                     <form class="modal-form">
-                        <div class="modal-field">
-                            <label class="modal-label" for="name">Имя</label>
-                            <input class="modal-input" type="name" name="name" id="name">
+
+                        <label class="modal-field">
+                            <span class="modal-label">Имя</span>
+                            <input class="modal-input" type="text" name="name">
                             <svg class="icon-form" width="18" height="18">
                                 <use href="./images/svg/sprite.svg#icon-name"></use>
                             </svg>
-                        </div>
-                        <div class="modal-field">
-                            <label class="modal-label" for="tel">Телефон</label>
-                            <input class="modal-input" type="tel" name="tel" id="tel">
+                        </label>
+
+                        <label class="modal-field">
+                            <span class="modal-label">Телефон</span>
+                            <input class="modal-input" type="tel" name="tel">
                             <svg class="icon-form" width="18" height="18">
                                 <use href="./images/svg/sprite.svg#icon-tel"></use>
                             </svg>
-                        </div>
-                        <div class="modal-field">
-                            <label class="modal-label" for="mail">Почта</label>
-                            <input class="modal-input" type="email" name="mail" id="mail">
+                        </label>
+
+                        <label class="modal-field">
+                            <span class="modal-label">Телефон</span>
+                            <input class="modal-input" type="email" name="mail">
                             <svg class="icon-form" width="18" height="18">
                                 <use href="./images/svg/sprite.svg#icon-mail"></use>
                             </svg>
-                        </div>
-                        <div class="modal-field">
-                            <label class="modal-label" for="comments">Комментарий</label>
-                            <textarea class="comment" name="comments" id="comments" placeholder="Введите текст"
-                                rows="10"></textarea>
-                        </div>
+                        </label>
+
+                        <label class="modal-field">
+                            <span class="modal-label">Комментарий</span>
+                            <textarea class="comment" name="comments" placeholder="Введите текст" rows="10"></textarea>
+                        </label>
 
 
-                        <div class="modal-field">
-                            <input type="checkbox" name="checkbox" id="checkbox">
-                            <label for="checkbox">Соглашаюсь с рассылкой и принимаю
-                                <a class="contract-link" href=""><span class="contract">Условия договора</span></a>
+                        <div class="checkbox-field">
+
+
+                            <label class="checkbox-label">
+                                <span class="check-description"> Соглашаюсь с рассылкой и принимаю
+                                    <a class="contract-link" href=""><span class="contract">Условия
+                                            договора</span></a>
+                                </span>
+                                <input class="checkbox-input" type="checkbox" name="checkbox">
+
+                                <span class="custom-check-input">
+                                    <svg class="icon-check" width="16" height="15">
+                                        <use href="./images/svg/sprite.svg#icon-icon-check"></use>
+                                    </svg>
+                                </span>
                             </label>
-                            <svg class="icon-form" width="18" height="18">
-                                <use href="./images/svg/sprite.svg#icon-check-mark"></use>
-                            </svg>
                         </div>
 
-                        <button type="submit" class="button-sub" disabled>Отправить</button>
+                        <button type="submit" class="button-submit" disabled>Отправить</button>
                     </form>
 
 
@@ -555,6 +567,9 @@
                     </ul>
 
                 </div>
+
+                <!-- форма подписки -->
+
                 <div class="subscription">
 
                     <h3 class="subscription-title">Подпишитесь на рассылку</h3>
