--- a/index.html
+++ b/index.html
@@ -75,26 +75,32 @@
 
                         <label class="modal-field">
                             <span class="modal-label">Имя</span>
-                            <input class="modal-input" type="text" name="name">
-                            <svg class="icon-form" width="18" height="18">
-                                <use href="./images/svg/sprite.svg#icon-name"></use>
-                            </svg>
+                            <div class="modal-icon">
+                                <input class="modal-input" type="text" name="name">
+                                <svg class="icon-form" width="12" height="12">
+                                    <use href="./images/svg/sprite.svg#icon-name"></use>
+                                </svg>
+                            </div>
                         </label>
 
                         <label class="modal-field">
                             <span class="modal-label">Телефон</span>
-                            <input class="modal-input" type="tel" name="tel">
-                            <svg class="icon-form" width="18" height="18">
-                                <use href="./images/svg/sprite.svg#icon-tel"></use>
-                            </svg>
+                            <div class="modal-icon">
+                                <input class="modal-input" type="tel" name="tel">
+                                <svg class="icon-form" width="13" height="13">
+                                    <use href="./images/svg/sprite.svg#icon-tel"></use>
+                                </svg>
+                            </div>
                         </label>
 
                         <label class="modal-field">
                             <span class="modal-label">Телефон</span>
-                            <input class="modal-input" type="email" name="mail">
-                            <svg class="icon-form" width="18" height="18">
-                                <use href="./images/svg/sprite.svg#icon-mail"></use>
-                            </svg>
+                            <div class="modal-icon">
+                                <input class="modal-input" type="email" name="mail">
+                                <svg class="icon-form" width="15" height="12">
+                                    <use href="./images/svg/sprite.svg#icon-mail"></use>
+                                </svg>
+                            </div>
                         </label>
 
                         <label class="modal-field">
